# goit-pythonweb-hw-01

./: factory.py  pyproject.toml  solid.py
